SFTP-to-S3-lambda/aws-resources/OM-AWS/template/group-compliance/non-prod/CFN/sg/Non-PROD-DB-SG.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: NON PROD DB security Group
Parameters:
  EnvName:
    Description: (REQUIRED) Enter Environment Type (Dev/QA/Prod)
    Default: Non-Prod
    Type: String
    AllowedValues:
      - Dev
      - QA
      - Prod
      - Non-Prod
  Project:
    Type: String
    Default: NON-Prod
    Description: (REQUIRED) Enter the Project Name
  VPCID:
    ConstraintDescription: Must be a valid IP range in x.x.x.x/x notation
    Default: vpc-0bea344eee100523e
    Description: (REQUIRED) Choose the VPC to Deploy Resources
    Type: String
  VPCCIDRBLOCK:
    Default: 10.128.244.0/25
    Description: (REQUIRED) Choose the VPC to Deploy Resources
    Type: String
  VPCCIDRBLOCKCLIENT:
    Default: 10.0.0.0/8
    Description: (REQUIRED) Choose the VPC to Deploy Resources
    Type: String
  ResourceExportName:
    Type: String
    Default: NON
Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow IOP DEV ports to client host
      GroupName: NON-PROD-DB-SG
      Tags:
        - Key: Name
          Value: NON-PROD-DB-SG
      VpcId: !Ref 'VPCID'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: !Ref 'VPCCIDRBLOCK'
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: !Ref 'VPCCIDRBLOCKCLIENT'
        - IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          CidrIp: !Ref 'VPCCIDRBLOCKCLIENT'
        - IpProtocol: tcp
          FromPort: '1433'
          ToPort: '1433'
          CidrIp: !Ref 'VPCCIDRBLOCKCLIENT'

      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: '0.0.0.0/0'
Outputs:
  SecurityGroupId:
    Value:
      Fn::GetAtt:
        - InstanceSecurityGroup
        - GroupId
    Export:
      Name:
        Fn::Sub: '${EnvName}-${ResourceExportName}-DB-SecurityGroupId'
